infra/application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: score-server-ingress
  namespace: score-server
spec:
  ingressClassName: nginx
  rules:
    - host: score-server.bastian-somon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: score-server-backend
                port:
                  number: 8080
